
Copyright (c) 1998-2011 Paulo Moura.        All Rights Reserved.
Logtalk is free software.  You can redistribute it and/or modify
it under the terms of the "Artistic License 2.0" as published by 
The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.42.2 - January ??, 2010

    Adds a category implementing named integer counters, "counters", to the
    library.


2.42.1 - December 22, 2010

    Added support to the Logtalk compiler for detecting and reporting
    missing dynamic/1 and discontiguous/1 predicate directives.

    Added a new lint flag, "missing_directives", with a default value of
    "warning", to all config files. This flag enables printing of compiler
    warnings for missing dynamic/1, discontiguous/1, and multifile/1 predicate
    directives.

    Added support for new meta-predicate template mode indicators: (/) for a
    predicate indicator, [/] for a list of predicate indicators, and [0] for
    a list of goals.

    Corrected a bug in the Logtalk compiler when checking meta-predicate
    clause heads for errors where the "::" meta-argument mode indicator
    was still being interpreted as "0".

    Corrected a bug in the handling of closures (in meta-calls) that are
    used to construct calls to control constructs or built-in predicates
    which could result in calling some meta-arguments in the wrong context.
    Thanks to Ulrich Neumerkel for the illustrating example in the SWI-Prolog
    mailing list.

    Updated the Logtalk compiler in order to avoid printing warnings about
    missing references to the "expanding" and "monitoring" built-in protocols
    when compiling modules as objects.

    Reverted the changes in version 2.39.2 that allowed the pseudo-object
    "user" to virtually contain the definition of all Prolog built-in
    predicates. This could lead to different results depending on the