@@ -439,6 +439,8 @@ The following predicates are defined:
 		<dd>Expands a file specification in library notation to a full operating-system path.</dd>
 	<dt><code>loaded_file(File, Directory)</code></dt>
 		<dd>Returns the name of currently loaded source files (with extension) and the source file directories.</dd>
+	<dt><code>compile_auxiliary_clauses(Clauses)</code></dt>
+		<dd>Compiles a list of auxiliary clauses. This method is usually called from <code>goal_expansion/2</code> hooks in order to compile auxiliary clauses generated for supporting an expanded goal.</dd>
 	<dt><code>compile_predicate_heads(Heads, TranslatedHeads)</code></dt>
 		<dd>Compiles a predicate head, a list of predicate heads, or a conjunction of predicate heads in the context of the entity being compiled.</dd>
 	<dt><code>compile_predicate_heads(Heads, TranslatedHeads, ContextArgument)</code></dt>
@@ -461,7 +463,7 @@ In order to use these predicates, simply send the corresponding message to the <
 <div class="footer">
 	<div class="copyright">
 		<span>Copyright &copy; <a href="mailto:pmoura@logtalk.org">Paulo Moura</a> &mdash; <a href="http://logtalk.org">Logtalk.org</a></span><br/>	
-		<span>Last updated on: November 29, 2010</span>
+		<span>Last updated on: January 5, 2011</span>
 	</div>
 	<div class="navbottom">
 		<span><a href="messages.html">previous</a> | <a href="../glossary.html">glossary</a> | <a href="protocols.html">next</a></span><br/>
