@@ -35,7 +35,7 @@
 		<br/>
 		<span>http://logtalk.org/</span>
 	</p>
-	<p class="date">Last updated on December 21, 2010</p>
+	<p class="date">Last updated on January 5, 2011</p>
 </div>
 
 <div class="toc">
